--- a/src/App/shared.scss
+++ b/src/App/shared.scss
@@ -30,6 +30,16 @@ body {
     border-radius: 0px;
 }
 
+::-webkit-scrollbar, ::-webkit-scrollbar-corner {
+    width: 1em;
+    height: 1em;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 1em;
+    border: 0.39em solid;
+}
+
 // used when tabbing and space
 :focus {
     outline-color: $accent !important;
